Added Calculator functionality

--- a/DragonVM/DragonVM.csproj
+++ b/DragonVM/DragonVM.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="main.cs" />
-    <Compile Include="VM.cs" />
+    <Compile Include="Interpreter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
